--- a/template/path.html
+++ b/template/path.html
@@ -395,10 +395,18 @@
     }
   })
 
+  function getCookie(name) {
+    var r = document.cookie.match("\\b" + name + "=([^;]*)\\b");
+    return r ? r[1] : undefined;
+  }
+
   $("#download_btn").click(function () {
     if (urls.size) {
       $.ajax({
         url: "/download",
+        headers: {
+          "X-XSRFToken": getCookie("_xsrf"),
+        },
         data: JSON.stringify(Array.from(urls)),
         type: "post",
         success: function (result) {
